--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -12,40 +12,24 @@ on:
 jobs:
   format-check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v5
 
       - name: Setup
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.13'
-
-      - name: Install
-        env:
-          PIP_DISABLE_PIP_VERSION_CHECK: '1'
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        uses: ./.github/actions/setup
 
       - name: Run
         run: black --check --diff .
 
   lint-check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v5
 
       - name: Setup
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.13'
-
-      - name: Install
-        env:
-          PIP_DISABLE_PIP_VERSION_CHECK: '1'
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        uses: ./.github/actions/setup
 
       - name: Run
         run: ruff check --output-format=github .
